# randeval

./: .gitignore  README.md  pyproject.toml
scripts/: analyze_renders.py  bbs_sweep.py  extract.py  generate.py  pilot_smalln.py  recompute_psnr.py  render_poc.py  run_evaluation.py  test_bits.py
src/randeval/: __init__.py  sequence.py
src/randeval/extractors/: __init__.py  _utils.py  adaptive.py  base.py  computational.py  cryptomite_ext.py  debiasing.py  hashing.py  practical.py  von_neumann.py
src/randeval/generators/: __init__.py  _utils.py  base.py  classical.py  csprng.py  quantum.py  trng.py
src/randeval/rendering/: __init__.py  analysis.py  bitstream.py  integrator.py  mitsuba_adapter.py
src/randeval/tests_statistical/: __init__.py  _utils.py  autocorrelation.py  base.py  dieharder.py  distribution.py  entropy.py  nist.py  novel.py  sp800_90b.py
tests/extractors/: test_adaptive.py  test_computational.py  test_cryptomite.py  test_debiasing.py  test_hashing.py  test_integration.py  test_practical.py  test_utils.py  test_von_neumann.py
tests/statistical/: reference.py  run_calibration.py  test_cross_impl.py  test_nist_kat.py  test_null_calibration.py  test_sanity.py
